--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": ".",
     "paths": {
       "@utils/*": ["src/utils/*"],
-      "@core/*": ["src/core/*"]
+      "@core/*": ["src/core/*"],
+      "@constants/*": ["src/constants/*"]
     },
     "strict": true,
     "esModuleInterop": true
